--- a/index.html
+++ b/index.html
@@ -13,52 +13,51 @@
     <p>Adopted using Devoxify's <a target="_blank" href="https://www.devoxify.com/posts/the-definitive-guide-to-java-backend-developer-career-path/">Definitive Guide to Java Backend Developer Path</a>
     <h3>Part 1</h3>
     <ul>
-        <li><a href="#core-java">1.1 Core Java</a></li>
-        <li><a href="#java-oop">1.2 Java OOP</a></li>
-        <li><a href="#first-app">1.3 <strong>Write 1st app</strong> (Java OOP)</a> </li>
-        <li><a href="#webdevbasics">1.4 Web Dev Basics: HTTP protocol and basics of HTML, JavaScript, CSS, AJAX</a></li>
-        <li><a href="#linux">1.5 Linux</a></li>
-        <li><a href="#servlets-jsp">1.6 Web Servers, Servlets, Thymeleaf/JSP</a></li>
-        <li><a href="#databases">1.7 Databases</a></li>
-        <li><a href="#mvc">1.8 MVC Pattern</a></li>
-        <li><a href="#jdbc">1.9 JDBC</a></li>
-        <li><a href="#security">1.10 Website Security</a></li>
-        <li><a href="#maven">1.11 Build Tools: Maven</a></li>
-        <li><a href="#servlets-jsp-videos">1.12 JSP/Servlet/JDBC Project Tutorials </a> </li>
-        <li><a href="#second-app">1.13 <strong>Write 2nd app</strong> (Servlets + JDBC + MySql/Postgres + JSP/Thymleaf)</a> </li>
+        <li><a href="#core-java">Core Java</a></li>
+        <li><a href="#java-oop">Java OOP</a></li>
+        <li><a href="#first-app"><strong>Write 1st app</strong> (Java OOP)</a> </li>
+        <li><a href="#webdevbasics">Web Dev Basics: HTTP protocol and basics of HTML, JavaScript, CSS, AJAX</a></li>
+        <li><a href="#linux">Linux</a></li>
+        <li><a href="#servlets-jsp">Web Servers, Servlets, Thymeleaf/JSP</a></li>
+        <li><a href="#databases">Databases</a></li>
+        <li><a href="#mvc">MVC Pattern</a></li>
+        <li><a href="#jdbc">JDBC</a></li>
+        <li><a href="#security">Website Security</a></li>
+        <li><a href="#maven">Build Tools: Maven</a></li>
+        <li><a href="#servlets-jsp-videos">JSP/Servlet/JDBC Project Tutorials </a> </li>
+        <li><a href="#second-app"><strong>Write 2nd app</strong> (Servlets + JDBC + MySql/Postgres + JSP/Thymleaf)</a> </li>
     </ul>
 
     <h3>Part 2</h3>
 
     <ul>
-      <li><a href="#jpa-hibernate">2.1 ORM, JPA, Hibernate</a></li>
-      <li><a href="#spring">2.2 Spring (Core/MVC/Spring Boot)</a></li>
-      <li><a href="#spring-projects">2.3 Spring Project Tutorials</a></li>
-      <li><a href="#hibernate-spring">2.4 JPA/Hibernate with Spring</a></li>
-      <li><a href="#spring-data">2.5 Spring Data JPA</a></li>
-      <li><a href="#spring-data-projects">2.6 Spring MVC + Spring Data JPA Project Tutorials</a></li>
-      <li><a href="#spring-security">2.7  Spring Security</a></li>
-      <li><a href="#spring-security-projects">2.8 Spring Security Project Tutorials</a></li>
-      <li><a href="#complete-spring-boot-projects">2.9 Complete Spring Boot Project Tutorials</a></li>
-      <li><a href="#git">2.10 Source Control and Git</a></li>
-      <li><a href="#third-app">2.11 <strong>Write 3rd app</strong> (Spring Boot + Hibernate/Spring Data + MySQL/Postgres + Thymeleaf/JSP)</a> </li>
+      <li><a href="#jpa-hibernate">ORM, JPA, Hibernate</a></li>
+      <li><a href="#spring">Spring (Framework/MVC/Spring Boot)</a></li>
+      <li><a href="#spring-projects">Spring Project Tutorials</a></li>
+      <li><a href="#spring-data">Spring Data JPA</a></li>
+      <li><a href="#spring-data-projects">Spring MVC + Spring Data JPA Project Tutorials</a></li>
+      <li><a href="#spring-security">Spring Security</a></li>
+      <li><a href="#spring-security-projects">Spring Security Project Tutorials</a></li>
+      <li><a href="#complete-spring-boot-projects">Complete Spring Boot Project Tutorials</a></li>
+      <li><a href="#git">Source Control and Git</a></li>
+      <li><a href="#third-app"><strong>Write 3rd app</strong> (Spring Boot + Hibernate/Spring Data + MySQL/Postgres + Thymeleaf/JSP)</a> </li>
     </ul>
     <h3>Part 3</h3>
     <ul>
-      <li><a href="#design-patterns-and-ds">3.1 Design Patterns and Data Structures</a></li>
-      <li><a href="#tests">3.2 Tests</a></li>
-      <li><a href="#microservices">3.3  Microservices</a></li>
-      <li><a href="#messaging">3.4 Messaging systems and JMS</a></li>
-      <li><a href="#microservices-projects">3.5 Microservices Tutorial Projects</a></li>
-      <li><a href="#websockets">3.6 Websockets</a></li>
-      <li><a href="#restful-web">3.7 REST API with RESTful Web Services (JAX-RS )</a></li>
-      <li><a href="#restful-web-crud">3.8 REST Web Services API for CRUD Tutorial</a></li>
-      <li><a href="#spring-rest">3.9 Spring Boot RESTful Web Services</a></li>
-      <li><a href="#spring-rest-crud">3.10 REST Web Services API for CRUD Tutorial</a></li>
-      <li><a href="#angular">3.11 Angular</a></li>
-      <li><a href="#angular-spring">3.12 Spring Boot + Angular</a></li>
-      <li><a href="#external-apis">3.13 External REST APIs</a></li>
-      <li><a href="#fourth-app">3.14 Write 4th Java app (REST API + all learned technologies)</a></li>
+      <li><a href="#design-patterns-and-ds">Design Patterns and Data Structures</a></li>
+      <li><a href="#tests">Tests</a></li>
+      <li><a href="#microservices">Microservices</a></li>
+      <li><a href="#messaging">Messaging systems and JMS</a></li>
+      <li><a href="#microservices-projects">Microservices Tutorial Projects</a></li>
+      <li><a href="#websockets">Websockets</a></li>
+      <li><a href="#restful-web">REST API with RESTful Web Services (JAX-RS )</a></li>
+      <li><a href="#restful-web-crud">REST Web Services API for CRUD Tutorial</a></li>
+      <li><a href="#spring-rest">Spring Boot RESTful Web Services</a></li>
+      <li><a href="#spring-rest-crud">REST Web Services API for CRUD Tutorial</a></li>
+      <li><a href="#angular">Angular</a></li>
+      <li><a href="#angular-spring">Spring Boot + Angular</a></li>
+      <li><a href="#external-apis">External REST APIs</a></li>
+      <li><a href="#fourth-app">Write 4th Java app (REST API + all learned technologies)</a></li>
       <li><a href="#additional-studies">Additional Studies</a></li>
 
 
