--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
             <td>Code Java</td>
             <td>Telusko (YouTube)</td>
             <td>Spring.io</td>
-            <td>Edureka (YouTube)</td>
+             <td>kindsonthegenius (YouTube) <br> <a target="_blank" href="https://www.kindsonthegenius.com/spring-boot/">Link to walkthrough</a></td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.codejava.net/frameworks/spring/understanding-the-core-of-spring-framework">Link to Tutorial</a></td>
@@ -491,7 +491,7 @@
             <td><a target="_blank" href="https://mail.codejava.net/frameworks/spring/understanding-spring-mvc">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v=g2b-NbR48Jo">Link to Video</a></td>
             <td><a target="_blank" href="https://spring.io/guides/gs/spring-boot/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=UfOxcrxhC0s">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZmcVtnrtCJLnoeKwWE6oylK">Link to Playlist</a></td>
           </tr>
         </table> <br>
 
