--- a/index.html
+++ b/index.html
@@ -509,17 +509,14 @@
 
             </tr>
             <tr>
-              <th>JPA Text Tutorial</th>
-              <th>Hibernate Text Tutorial</th>
+              <th>JPA/ Hibernate Text Tutorial</th>
               <th>JPA/Hibernate with Spring Video Tutorial</th>
             </tr>
             <tr>
               <td>InfoWorld</td>
-              <td>InfoWorld</td>
               <td>kindsonthegenius (YouTube) <br> <a target="_blank" href="https://www.kindsonthegenius.com/hibernate-relationship-tutorial-onetomany-and-manytoone/">Link to walkthrough</a></td>
             </tr>
             <tr>
-              <td><a target="_blank" href="https://www.infoworld.com/article/3379043/what-is-jpa-introduction-to-the-java-persistence-api.html">Link to Tutorial</a></td>
               <td><a target="_blank" href="https://www.infoworld.com/article/3373652/java-persistence-with-jpa-and-hibernate-part-1-entities-and-relationships.html">Link to Tutorial</a></td>
               <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZkGYaUAI5lyppp8oyIBKk8d">Link to Playlist</a></td>
             </tr>
