--- a/index.html
+++ b/index.html
@@ -462,39 +462,65 @@
     <h4 id="spring">Spring</h4>
         <p>You should definitely use Spring Boot but I think you should not start with it. <strong>Start with Spring Core, Spring MVC, and at the end switch to Spring Boot.</strong>. Spring Boot  was created because Spring itself is so complicated that it needed a configuration framework. You need to know that only very old, legacy apps use XML config so don’t spend too much time on this approach. Every modern app uses an annotation-based config so focus on this way on configuring your app. </p>
 
+
+        <p><strong>Spring Framework(Core)</strong> - You should definitely use Spring Boot but I think you should not start with it. Start with Spring Core.</p>
         <table>
           <tr>
               <th colspan="2" class="course-title">Spring Core(Framework)</th>
-              <th colspan="2" class="course-title">Spring MVC</th>
-              <th colspan="2" class="course-title">Spring Boot</th>
-
           </tr>
           <tr>
             <th>Spring Framework Text Tutorial</th>
             <th>Spring Video Tutorial</th>
-            <th>Spring MVC Text Tutorial</th>
-            <th>Spring MVC Video Tutorial</th>
-            <th>Spring Boot Text Tutorial</th>
-            <th>Spring Boot Video Tutorial</th>
           </tr>
           <tr>
             <td>CodeJava</td>
             <td>Simplilearn (YouTube)</td>
-            <td>Code Java</td>
-            <td>Telusko (YouTube)</td>
-            <td>Spring.io</td>
-             <td>kindsonthegenius (YouTube) <br> <a target="_blank" href="https://www.kindsonthegenius.com/spring-boot/">Link to walkthrough</a></td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.codejava.net/frameworks/spring/understanding-the-core-of-spring-framework">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v=j3byTqx7KDE">Link to Video</a></td>
+          </tr>
+        </table> <br>
+
+        <p><strong>Spring MVC</strong> -  Next,learn Spring MVC</p>
+        <table>
+          <tr>
+              <th colspan="2" class="course-title">Spring Security</th>
+          </tr>
+          <tr>
+            <th>Spring MVC Text Tutorial</th>
+            <th>Spring MVC Video Tutorial</th>
+          </tr>
+          <tr>
+            <td>Code Java</td>
+            <td>Telusko (YouTube)</td>
+          </tr>
+          <tr>
             <td><a target="_blank" href="https://mail.codejava.net/frameworks/spring/understanding-spring-mvc">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v=g2b-NbR48Jo">Link to Video</a></td>
+          </tr>
+        </table> <br>
+
+        <p><strong>Spring Boot</strong> - After learning Spring MVC, finally switch to Spring Boot. Spring Boot  was created because Spring itself is so complicated that it needed a configuration framework. You need to know that only very old, legacy apps use XML config so don’t spend too much time on this approach. Every modern app uses an annotation-based config so focus on this way on configuring your app. </p>
+        <table>
+          <tr>
+              <th colspan="2" class="course-title">Spring Boot</th>
+          </tr>
+          <tr>
+            <th>Spring Boot Text Tutorial</th>
+            <th>Spring Boot Video Tutorial</th>
+          </tr>
+          <tr>
+            <td>Spring.io</td>
+             <td>kindsonthegenius (YouTube) <br> <a target="_blank" href="https://www.kindsonthegenius.com/spring-boot/">Link to walkthrough</a></td>
+          </tr>
+          <tr>
             <td><a target="_blank" href="https://spring.io/guides/gs/spring-boot/">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZmcVtnrtCJLnoeKwWE6oylK">Link to Playlist</a></td>
           </tr>
         </table> <br>
 
+    <hr>
 
       <h4 id="jpa-hibernate">ORM, JPA, Hibernate</h4>
         <p> Apart from learning Spring you have to learn Hibernate. You need to know how to create your models and what relation annotation to use so that Spring could do its magic.</p>
@@ -592,30 +618,6 @@
 
             </tr>
           </table> <br>
-
-
-          <hr>
-
-
-        <h4 id="spring-security">Spring Security</h4>
-        <p> Add security concepts to Spring project</p>
-        <table>
-          <tr>
-              <th colspan="2" class="course-title">Spring Security</th>
-          </tr>
-          <tr>
-            <th>Spring Security Text Tutorial</th>
-            <th>Spring Security Video Tutorial</th>
-          </tr>
-          <tr>
-            <td>Auth0</td>
-            <td>Java Brains (YouTube)</td>
-          </tr>
-          <tr>
-            <td><a target="_blank" href="https://auth0.com/blog/spring-security-overview/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLqq-6Pq4lTTYTEooakHchTGglSvkZAjnE">Link to Playlist</a></td>
-          </tr>
-        </table> <br>
 
 
         <hr>
