--- a/index.html
+++ b/index.html
@@ -460,9 +460,6 @@
 
 
     <h4 id="spring">Spring</h4>
-        <p>You should definitely use Spring Boot but I think you should not start with it. <strong>Start with Spring Core, Spring MVC, and at the end switch to Spring Boot.</strong>. Spring Boot  was created because Spring itself is so complicated that it needed a configuration framework. You need to know that only very old, legacy apps use XML config so don’t spend too much time on this approach. Every modern app uses an annotation-based config so focus on this way on configuring your app. </p>
-
-
         <p><strong>Spring Framework(Core)</strong> - You should definitely use Spring Boot but I think you should not start with it. Start with Spring Core.</p>
         <table>
           <tr>
@@ -485,7 +482,7 @@
         <p><strong>Spring MVC</strong> -  Next,learn Spring MVC</p>
         <table>
           <tr>
-              <th colspan="2" class="course-title">Spring Security</th>
+              <th colspan="2" class="course-title">Spring MVC</th>
           </tr>
           <tr>
             <th>Spring MVC Text Tutorial</th>
