--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
 
 
     <h4 id="spring">Spring</h4>
+    <p>If you want to code in Java you should learn Spring. We initially used JavaEE (JSP, JDBC etc) which we used for web apps first. Now we can learn Spring where we'll see the difference between the two.</p>
         <p><strong>Spring Framework(Core)</strong> - You should definitely use Spring Boot but I think you should not start with it. Start with Spring Core.</p>
         <table>
           <tr>
