--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
           </tr>
           <tr>
             <td>Spring.io</td>
+             <td>Code Java <br> <a target="_blank" href="https://www.codejava.net/spring-boot-tutorials">Link to Tutorials</a></td>
              <td>kindsonthegenius (YouTube) <br> <a target="_blank" href="https://www.kindsonthegenius.com/spring-boot/">Link to walkthrough</a></td>
           </tr>
           <tr>
@@ -569,30 +570,6 @@
           </table> <br>
 
           <hr>
-
-        <h4 id="spring-data">Spring Data</h4>
-        <p> It generates methods that underneath use Hibernate. It significantly reduces the amount of boilerplate code in our project. Most likely you will be using Spring Data most often in your applications. But before you start using it you have to understand all the concepts. </p>
-
-
-        <table>
-          <tr>
-              <th colspan="2" class="course-title">Spring Data</th>
-          </tr>
-          <tr>
-            <th>Spring Boot Data Text Tutorial</th>
-            <th>Spring Boot Data Video Tutorial</th>
-          </tr>
-          <tr>
-            <td>Jetbrains</td>
-            <td>Code Java (YouTube) <br><a href="https://www.codejava.net/frameworks/spring/understand-spring-data-jpa-with-simple-example" target="_blank">Link to Walkthrough</a></td>
-          </tr>
-          <tr>
-            <td><a target="_blank" href="https://www.jetbrains.com/idea/guide/tutorials/getting-started-spring-data-jpa/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=JB2f29OcciM">Link to Video</a></td>
-          </tr>
-        </table> <br>
-
-        <hr>
 
         <h4 id="spring-data-projects">Spring MVC + Spring Data JPA Project Tutorials</h4>
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
