--- a/index.html
+++ b/index.html
@@ -459,12 +459,12 @@
           <hr class="section-separator">
 
 
-    <h4 id="spring">Spring</h4>
+    <h4 id="spring-framework">Spring Framework</h4>
     <p>If you want to code in Java you should learn Spring. We initially used JavaEE (JSP, JDBC etc) which we used for web apps first. Now we can learn Spring where we'll see the difference between the two.</p>
         <p><strong>Spring Framework(Core)</strong> - You should definitely use Spring Boot but I think you should not start with it. Start with Spring Core.</p>
         <table>
           <tr>
-              <th colspan="2" class="course-title">Spring Core(Framework)</th>
+              <th colspan="2" class="course-title">Spring Framework</th>
           </tr>
           <tr>
             <th>Spring Framework Text Tutorial</th>
@@ -480,7 +480,7 @@
           </tr>
         </table> <br>
 
-        <p><strong>Spring MVC</strong> -  Next,learn Spring MVC</p>
+        <p><strong>Spring MVC</strong> -  Next,learn Spring MVC. Spring MVC is apart of the Spring Framework</p>
         <table>
           <tr>
               <th colspan="2" class="course-title">Spring MVC</th>
@@ -499,7 +499,10 @@
           </tr>
         </table> <br>
 
-        <p><strong>Spring Boot</strong> - After learning Spring MVC, finally switch to Spring Boot. Spring Boot  was created because Spring itself is so complicated that it needed a configuration framework. You need to know that only very old, legacy apps use XML config so don’t spend too much time on this approach. Every modern app uses an annotation-based config so focus on this way on configuring your app. </p>
+    <hr>
+
+    <h4 id="spring-framework">Spring Boot</h4>
+        <p>After learning Spring Framework, finally switch to Spring Boot. Spring Boot  was created because Spring itself is so complicated that it needed a configuration framework. You need to know that only very old, legacy apps use XML config so don’t spend too much time on this approach. Every modern app uses an annotation-based config so focus on this way on configuring your app. </p>
         <table>
           <tr>
               <th colspan="2" class="course-title">Spring Boot</th>
