--- a/index.html
+++ b/index.html
@@ -499,28 +499,6 @@
           </tr>
         </table> <br>
 
-    <hr>
-
-    <h4 id="spring-framework">Spring Boot</h4>
-        <p>After learning Spring Framework, finally switch to Spring Boot. Spring Boot  was created because Spring itself is so complicated that it needed a configuration framework. You need to know that only very old, legacy apps use XML config so don’t spend too much time on this approach. Every modern app uses an annotation-based config so focus on this way on configuring your app. </p>
-        <table>
-          <tr>
-              <th colspan="2" class="course-title">Spring Boot</th>
-          </tr>
-          <tr>
-            <th>Spring Boot Text Tutorial</th>
-            <th>Spring Boot Video Tutorial</th>
-          </tr>
-          <tr>
-            <td>Spring.io</td>
-             <td>Code Java <br> <a target="_blank" href="https://www.codejava.net/spring-boot-tutorials">Link to Tutorials</a></td>
-             <td>kindsonthegenius (YouTube) <br> <a target="_blank" href="https://www.kindsonthegenius.com/spring-boot/">Link to walkthrough</a></td>
-          </tr>
-          <tr>
-            <td><a target="_blank" href="https://spring.io/guides/gs/spring-boot/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZmcVtnrtCJLnoeKwWE6oylK">Link to Playlist</a></td>
-          </tr>
-        </table> <br>
 
     <hr>
 
@@ -552,6 +530,50 @@
 
 
         <hr>
+
+
+        <p><strong>Spring Data JPA</strong> - Finally learn Spring Data JPA</p>
+        <table>
+          <tr>
+              <th colspan="2" class="course-title">Spring Data JPS</th>
+          </tr>
+          <tr>
+            <th>Spring Data Text Tutorial</th>
+            <th>Spring Data Video Tutorial</th>
+          </tr>
+          <tr>
+            <td>Code Java</td>
+            <td>Code Java (YouTube)</td>
+          </tr>
+          <tr>
+            <td><a target="_blank" href="https://www.codejava.net/frameworks/spring/understand-spring-data-jpa-with-simple-example">Link to Tutorial</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=JB2f29OcciM">Link to Video</a></td>
+          </tr>
+        </table> <br>
+
+    <hr>
+
+    <h4 id="spring-framework">Spring Boot</h4>
+        <p>After learning Spring Framework, finally switch to Spring Boot. Spring Boot  was created because Spring itself is so complicated that it needed a configuration framework. You need to know that only very old, legacy apps use XML config so don’t spend too much time on this approach. Every modern app uses an annotation-based config so focus on this way on configuring your app. </p>
+        <table>
+          <tr>
+              <th colspan="2" class="course-title">Spring Boot</th>
+          </tr>
+          <tr>
+            <th>Spring Boot Text Tutorial</th>
+            <th>Spring Boot Video Tutorial</th>
+          </tr>
+          <tr>
+            <td>Spring.io</td>
+             <td>Code Java <br> <a target="_blank" href="https://www.codejava.net/spring-boot-tutorials">Link to Tutorials</a></td>
+             <td>kindsonthegenius (YouTube) <br> <a target="_blank" href="https://www.kindsonthegenius.com/spring-boot/">Link to walkthrough</a></td>
+          </tr>
+          <tr>
+            <td><a target="_blank" href="https://spring.io/guides/gs/spring-boot/">Link to Tutorial</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZmcVtnrtCJLnoeKwWE6oylK">Link to Playlist</a></td>
+          </tr>
+        </table> <br>
+
 
         <h4 id="spring-projects">Spring Project Tutorials</h4>
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
