--- a/index.html
+++ b/index.html
@@ -499,8 +499,22 @@
           </tr>
         </table> <br>
 
+        <h4 id="spring-mvc-projects">Spring MVC Project Tutorials</h4>
+        <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
+          <table>
+            <th>Contact List App (Spring MVC)</th>
 
-    <hr>
+            </tr>
+            <tr>
+              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring/spring-mvc-with-jdbctemplate-example">Contact List App Walkthrough</a></td>
+
+            </tr>
+            <tr>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=-wddkBQZuPs">Link to Video</a></td>
+            </tr>
+          </table> <br>
+
+          <hr>
 
       <h4 id="jpa-hibernate">ORM, JPA, Hibernate</h4>
         <p> Apart from learning Spring you have to learn Hibernate. You need to know how to create your models and what relation annotation to use so that Spring could do its magic.</p>
@@ -531,11 +545,10 @@
 
         <hr>
 
-
         <p><strong>Spring Data JPA</strong> - Finally learn Spring Data JPA</p>
         <table>
           <tr>
-              <th colspan="2" class="course-title">Spring Data JPS</th>
+              <th colspan="2" class="course-title">Spring Data JPA</th>
           </tr>
           <tr>
             <th>Spring Data Text Tutorial</th>
@@ -552,6 +565,23 @@
         </table> <br>
 
     <hr>
+
+        <h4 id="spring-mvc-projects">Spring Data JPA Project Tutorials</h4>
+        <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
+          <table>
+            <th>Contact List App (Spring MVC)</th>
+
+            </tr>
+            <tr>
+              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring/spring-mvc-with-jdbctemplate-example">Contact List App Walkthrough</a></td>
+
+            </tr>
+            <tr>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=-wddkBQZuPs">Link to Video</a></td>
+            </tr>
+          </table> <br>
+
+          <hr>
 
     <h4 id="spring-framework">Spring Boot</h4>
         <p>After learning Spring Framework, finally switch to Spring Boot. Spring Boot  was created because Spring itself is so complicated that it needed a configuration framework. You need to know that only very old, legacy apps use XML config so don’t spend too much time on this approach. Every modern app uses an annotation-based config so focus on this way on configuring your app. </p>
@@ -575,22 +605,17 @@
         </table> <br>
 
 
-        <h4 id="spring-projects">Spring Project Tutorials</h4>
+        <h4 id="spring-projects">Spring Boot Project Tutorials</h4>
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
           <table>
-            <th>Contact List App (Spring MVC)</th>
             <th>Employee Management App (Spring Boot)</th>
-
             </tr>
             <tr>
-              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring/spring-mvc-with-jdbctemplate-example">Contact List App Walkthrough</a></td>
               <td>B2 Tech</td>
 
             </tr>
             <tr>
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=-wddkBQZuPs">Link to Video</a></td>
               <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLA7e3zmT6XQV6dRpcyrdl0i27h5kDdmp1">Link to Playlist</a></td>
-
             </tr>
           </table> <br>
 
@@ -599,22 +624,22 @@
         <h4 id="spring-data-projects">Spring MVC + Spring Data JPA Project Tutorials</h4>
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
           <table>
-            <th>Contact Manager App</th>
             <th>Product Management App</th>
             <th>Student Management App</th>
+             <th>Employee Management App</th>
+
             </tr>
             <tr>
-              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring/spring-mvc-with-jdbctemplate-example">Contact Manager Walkthrough</a></td>
               <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-crud-example-with-spring-mvc-spring-data-jpa-thymeleaf-hibernate-mysql">Product Managment App Walkthrough</a></td>
               <td>Kindson The Genius <br><a target="_blank" href="https://www.kindsonthegenius.com/thymeleaf-spring-boot-complete-tutorial-step-by-step-with-source-codes/">Student Management Walkthrough</a></td>
+               <td>B2 Tech</td>
 
 
             </tr>
             <tr>
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=JfeCmn8NT88&t=147s">Link to Video</a></td>
               <td><a target="_blank" href="https://www.youtube.com/watch?v=QloyS2dt9T4&t=5s">Link to Video</a></td>
               <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZnEqlZLA_GI8vySZCZ7EBk9">Link to Playlist</a></td>
-
+              <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLA7e3zmT6XQV6dRpcyrdl0i27h5kDdmp1">Link to Playlist</a></td>
 
             </tr>
           </table> <br>
