--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             </tr>
             <tr>
               <td><a target="_blank" href="https://maven.apache.org/guides/getting-started/">Link to Tutorial</a></td>
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=x8sMN4tossY">Link to Video</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL55uMtDpag8rrOZ0LHFbtlPCfw4gIeIXw">Link to Playlist</a></td>
             </tr>
           </table> <br>
 
