--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             </tr>
             <tr>
               <td>Apache Maven</td>
-              <td>edureka (YouTube)</td>
+              <td>DevOpsLearnEasy (YouTube)</td>
             </tr>
             <tr>
               <td><a target="_blank" href="https://maven.apache.org/guides/getting-started/">Link to Tutorial</a></td>
