--- a/index.html
+++ b/index.html
@@ -499,17 +499,22 @@
           </tr>
         </table> <br>
 
+        <hr>
+
         <h4 id="spring-mvc-projects">Spring MVC Project Tutorials</h4>
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
           <table>
+            <th>Spring MVC CRUD App</th>
             <th>Contact List App (Spring MVC)</th>
-
             </tr>
             <tr>
+               <td>kindsonthetechpro (YouTube)</td>
               <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring/spring-mvc-with-jdbctemplate-example">Contact List App Walkthrough</a></td>
 
             </tr>
             <tr>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=ahrKHrseY2g">Link to Video</a></td>
+
               <td><a target="_blank" href="https://www.youtube.com/watch?v=-wddkBQZuPs">Link to Video</a></td>
             </tr>
           </table> <br>
@@ -534,7 +539,7 @@
             </tr>
             <tr>
               <td>InfoWorld</td>
-              <td>kindsonthegenius (YouTube) <br> <a target="_blank" href="https://www.kindsonthegenius.com/hibernate-relationship-tutorial-onetomany-and-manytoone/">Link to walkthrough</a></td>
+              <td>kindsonthetechpro (YouTube) <br> <a target="_blank" href="https://www.kindsonthegenius.com/hibernate-relationship-tutorial-onetomany-and-manytoone/">Link to walkthrough</a></td>
             </tr>
             <tr>
               <td><a target="_blank" href="https://www.infoworld.com/article/3373652/java-persistence-with-jpa-and-hibernate-part-1-entities-and-relationships.html">Link to Tutorial</a></td>
@@ -564,7 +569,7 @@
           </tr>
         </table> <br>
 
-    <hr>
+            <hr>
 
         <h4 id="spring-mvc-projects">Spring Data JPA Project Tutorials</h4>
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
