--- a/index.html
+++ b/index.html
@@ -612,13 +612,19 @@
         <h4 id="spring-projects">Spring Boot Project Tutorials</h4>
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
           <table>
-            <th>Employee Management App (Spring Boot)</th>
+            <th>Employee Management App </th>
+            <th>Product Management App</th>
+
             </tr>
             <tr>
               <td>B2 Tech</td>
+              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-crud-example-with-spring-mvc-spring-data-jpa-thymeleaf-hibernate-mysql">Product Managment App Walkthrough</a></td>
+
             </tr>
             <tr>
               <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLA7e3zmT6XQV6dRpcyrdl0i27h5kDdmp1">Link to Playlist</a></td>
+               <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-crud-example-with-spring-mvc-spring-data-jpa-thymeleaf-hibernate-mysql">Product Managment App Walkthrough</a></td>
+
             </tr>
           </table> <br>
 
@@ -635,7 +641,6 @@
             <tr>
               <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-crud-example-with-spring-mvc-spring-data-jpa-thymeleaf-hibernate-mysql">Product Managment App Walkthrough</a></td>
               <td>Kindson The Genius <br><a target="_blank" href="https://www.kindsonthegenius.com/thymeleaf-spring-boot-complete-tutorial-step-by-step-with-source-codes/">Student Management Walkthrough</a></td>
-               <td>B2 Tech</td>
 
 
             </tr>
