--- a/index.html
+++ b/index.html
@@ -614,16 +614,22 @@
           <table>
             <th>Employee Management App </th>
             <th>Product Management App</th>
+            <th>Student Management App</th>
+
 
             </tr>
             <tr>
               <td>B2 Tech</td>
               <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-crud-example-with-spring-mvc-spring-data-jpa-thymeleaf-hibernate-mysql">Product Managment App Walkthrough</a></td>
+              <td>Kindson The Genius <br><a target="_blank" href="https://www.kindsonthegenius.com/thymeleaf-spring-boot-complete-tutorial-step-by-step-with-source-codes/">Student Management Walkthrough</a></td>
+
 
             </tr>
             <tr>
               <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLA7e3zmT6XQV6dRpcyrdl0i27h5kDdmp1">Link to Playlist</a></td>
-               <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-crud-example-with-spring-mvc-spring-data-jpa-thymeleaf-hibernate-mysql">Product Managment App Walkthrough</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=QloyS2dt9T4&t=186s">Link to Video</a></td>
+               <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZnEqlZLA_GI8vySZCZ7EBk9">Link to Playlist</a></td>
+
 
             </tr>
           </table> <br>
