--- a/index.html
+++ b/index.html
@@ -574,15 +574,15 @@
         <h4 id="spring-mvc-projects">Spring Data JPA Project Tutorials</h4>
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
           <table>
-            <th>Contact List App (Spring MVC)</th>
+            <th>Spring Data CRUD App</th>
 
             </tr>
             <tr>
-              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring/spring-mvc-with-jdbctemplate-example">Contact List App Walkthrough</a></td>
+              <td>kindsonthetechpro <br><a target="_blank" href="https://www.codejava.net/frameworks/spring/spring-mvc-with-jdbctemplate-example">Contact List App Walkthrough</a></td>
 
             </tr>
             <tr>
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=-wddkBQZuPs">Link to Video</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=HphLLOcmVBU">Link to Video</a></td>
             </tr>
           </table> <br>
 
@@ -608,56 +608,24 @@
           </tr>
         </table> <br>
 
-
         <h4 id="spring-projects">Spring Boot Project Tutorials</h4>
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
           <table>
-            <th>Employee Management App </th>
             <th>Product Management App</th>
             <th>Student Management App</th>
 
-
             </tr>
             <tr>
-              <td>B2 Tech</td>
               <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-crud-example-with-spring-mvc-spring-data-jpa-thymeleaf-hibernate-mysql">Product Managment App Walkthrough</a></td>
               <td>Kindson The Genius <br><a target="_blank" href="https://www.kindsonthegenius.com/thymeleaf-spring-boot-complete-tutorial-step-by-step-with-source-codes/">Student Management Walkthrough</a></td>
 
 
             </tr>
             <tr>
-              <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLA7e3zmT6XQV6dRpcyrdl0i27h5kDdmp1">Link to Playlist</a></td>
               <td><a target="_blank" href="https://www.youtube.com/watch?v=QloyS2dt9T4&t=186s">Link to Video</a></td>
                <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZnEqlZLA_GI8vySZCZ7EBk9">Link to Playlist</a></td>
-
-
             </tr>
           </table> <br>
-
-          <hr>
-
-        <h4 id="spring-data-projects">Spring MVC + Spring Data JPA Project Tutorials</h4>
-        <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
-          <table>
-            <th>Product Management App</th>
-            <th>Student Management App</th>
-             <th>Employee Management App</th>
-
-            </tr>
-            <tr>
-              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-crud-example-with-spring-mvc-spring-data-jpa-thymeleaf-hibernate-mysql">Product Managment App Walkthrough</a></td>
-              <td>Kindson The Genius <br><a target="_blank" href="https://www.kindsonthegenius.com/thymeleaf-spring-boot-complete-tutorial-step-by-step-with-source-codes/">Student Management Walkthrough</a></td>
-
-
-            </tr>
-            <tr>
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=QloyS2dt9T4&t=5s">Link to Video</a></td>
-              <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZnEqlZLA_GI8vySZCZ7EBk9">Link to Playlist</a></td>
-              <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLA7e3zmT6XQV6dRpcyrdl0i27h5kDdmp1">Link to Playlist</a></td>
-
-            </tr>
-          </table> <br>
-
 
         <hr>
 
