--- a/index.html
+++ b/index.html
@@ -336,7 +336,6 @@
         <p><strong>View</strong> -  The view is some kind of HTML but it doesn’t contain any data, it just describes how HTML file should look like. For View layer <strong>JSP and Thymeleaf  </strong>are most popular choices with the latter one being younger and more friendly to use. </p>
         <p><strong>Controller</strong> - This is some kind of coordinator, it receives requests, prepare data and join it with a view and as a result outputs a ready HTML file to the client</p>
 
-
         <table>
           <tr>
               <th colspan="2" class="course-title">MVC</th>
@@ -574,15 +573,20 @@
         <h4 id="spring-mvc-projects">Spring Data JPA Project Tutorials</h4>
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
           <table>
-            <th>Spring Data CRUD App</th>
-
+            <tr>
+                 <th>Spring Data CRUD App</th>
+                 <th>Customer Management App</th>
             </tr>
             <tr>
-              <td>kindsonthetechpro <br><a target="_blank" href="https://www.codejava.net/frameworks/spring/spring-mvc-with-jdbctemplate-example">Contact List App Walkthrough</a></td>
+              <td>kindsonthetechpro</td>
+              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring/spring-mvc-spring-data-jpa-hibernate-crud-example">Link to Walkthrough</a></td>
+
 
             </tr>
             <tr>
               <td><a target="_blank" href="https://www.youtube.com/watch?v=HphLLOcmVBU">Link to Video</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=JfeCmn8NT88">Link to Video</a></td>
+
             </tr>
           </table> <br>
 
