--- a/index.html
+++ b/index.html
@@ -137,8 +137,6 @@
               <th colspan="2" class="course-title">Web Application Structure</th>
               <th colspan="2" class="course-title">HTTP & REST</th>
 
-
-
           <tr>
               <th>Internet Basics Text Tutorial</th>
               <th>Internet Basics Video Tutorial</th>
@@ -615,15 +613,14 @@
 
             </tr>
             <tr>
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=xaR7Nk0E1Aw">Link to Video</a></td>
+              <td>Spring Framework Guru</td>
               <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-crud-example-with-spring-mvc-spring-data-jpa-thymeleaf-hibernate-mysql">Product Managment App Walkthrough</a></td>
               <td>kindsonthetechpro <br><a target="_blank" href="https://www.kindsonthegenius.com/thymeleaf-spring-boot-complete-tutorial-step-by-step-with-source-codes/">Student Management Walkthrough</a></td>
 
             </tr>
             <tr>
-              <th>Spring Framework Guru<br></th>
-
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=QloyS2dt9T4&t=186s">Link to Video</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=xaR7Nk0E1Aw">Link to Video</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=QloyS2dt9T4">Link to Video</a></td>
                <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZnEqlZLA_GI8vySZCZ7EBk9">Link to Playlist</a></td>
             </tr>
           </table> <br>
@@ -649,7 +646,6 @@
             </tr>
           </table> <br>
           <hr>
-
 
         <h4 id="git">Source Control and Git</h4>
         <p> Knowing Git is a must-have nowadays. Don’t dive deep into it. You just need to understand the most important concepts like how to checkout new branch, how to commit changes, how to fetch changes from a remote branch, how to resolve conflicts during merge, how to push changes to the server, how to compare branches. I want you to learn git before you will jump to the next chapter because your second application should be written with it. Our second application is something that you might want to show to other people and you should use git and GitHub for this purpose.</p>
