--- a/index.html
+++ b/index.html
@@ -247,7 +247,6 @@
     
            <hr>
 
-
         <h4 id="servlets-jsp">Servlets, Thymeleaf/JSP</h4>
         <p>When a user enters a URL and hits enter a new <strong>HTTP request</strong> is made. This request goes to webserver on which your application is hosted. Then your <strong>webserver</strong> passes this request to the appropriate <strong>Servlet</strong>. In Servlet you can call your database to retrieve your data (model) and then return the view name to which the model should be binded. Then your model will be joined with a view and the response will be returned. </p>
 
@@ -624,6 +623,31 @@
                <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZnEqlZLA_GI8vySZCZ7EBk9">Link to Playlist</a></td>
             </tr>
           </table> <br>
+
+        <hr>
+
+
+        <h4 id="spring-security">Spring Security</h4>
+
+        <p>Secure your Spring applications with Spring Security</p>
+        <table>
+          <tr>
+              <th colspan="2" class="course-title">Spring SecurityData JPA</th>
+          </tr>
+          <tr>
+            <th>Spring Security Text Tutorial</th>
+            <th>Spring Security Video Tutorial</th>
+          </tr>
+          <tr>
+            <td>Auth0</td>
+            <td>Code Java (YouTube)</td>
+          </tr>
+          <tr>
+            <td><a target="_blank" href="https://auth0.com/blog/spring-security-overview/">Link to Article</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLqq-6Pq4lTTYTEooakHchTGglSvkZAjnE">Link to Playlist</a></td>
+          </tr>
+        </table> <br>
+
 
         <hr>
 
