--- a/index.html
+++ b/index.html
@@ -613,8 +613,8 @@
             </tr>
             <tr>
               <td>Spring Framework Guru</td>
-              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-crud-example-with-spring-mvc-spring-data-jpa-thymeleaf-hibernate-mysql">Product Managment App Walkthrough</a></td>
-              <td>kindsonthetechpro <br><a target="_blank" href="https://www.kindsonthegenius.com/thymeleaf-spring-boot-complete-tutorial-step-by-step-with-source-codes/">Student Management Walkthrough</a></td>
+              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-crud-example-with-spring-mvc-spring-data-jpa-thymeleaf-hibernate-mysql">Link to Walkthrough</a></td>
+              <td>kindsonthetechpro <br><a target="_blank" href="https://www.kindsonthegenius.com/thymeleaf-spring-boot-complete-tutorial-step-by-step-with-source-codes/">Link to Walkthrough</a></td>
 
             </tr>
             <tr>
