--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
         <p>Secure your Spring applications with Spring Security</p>
         <table>
           <tr>
-              <th colspan="2" class="course-title">Spring SecurityData JPA</th>
+              <th colspan="2" class="course-title">Spring Security</th>
           </tr>
           <tr>
             <th>Spring Security Text Tutorial</th>
@@ -648,10 +648,9 @@
           </tr>
         </table> <br>
 
-
         <hr>
 
-        <h4 id="spring-security-projects">Spring Security Project Tutorials</h4>
+        <h4>Spring Security Project Tutorials</h4>
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
           <table>
             <th>Secure Product Managment App</th>
@@ -669,7 +668,31 @@
 
             </tr>
           </table> <br>
-          <hr>
+
+        <hr>
+
+        <h4 id="complete-spring-boot-projects">Complete Spring Boot Projects</h4>
+
+        <p>Secure your Spring applications with Spring Security</p>
+        <table>
+          <tr>
+              <th colspan="2" class="course-title">Spring Security</th>
+          </tr>
+          <tr>
+            <th>Company Employee Management</th>
+            <th>Spring Security Video Tutorial</th>
+          </tr>
+          <tr>
+              <td>Kindson the tech pro <br><a target="_blank" href="https://www.kindsonthegenius.com/spring-boot/build-a-complete-spring-boot-application-from-the-scratch-step-by-step/">Spring Boot Security Authentication Walkthrough</a></td>
+              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/user-registration-and-login-tutorial">Spring Boot Security Authentication Walkthrough</a></td>
+          </tr>
+          <tr>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZkmDvzHCoLlc_nHBc7ZXiRO">Link to Playlist</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLqq-6Pq4lTTYTEooakHchTGglSvkZAjnE">Link to Playlist</a></td>
+          </tr>
+        </table> <br>
+
+        <hr>
 
         <h4 id="git">Source Control and Git</h4>
         <p> Knowing Git is a must-have nowadays. Don’t dive deep into it. You just need to understand the most important concepts like how to checkout new branch, how to commit changes, how to fetch changes from a remote branch, how to resolve conflicts during merge, how to push changes to the server, how to compare branches. I want you to learn git before you will jump to the next chapter because your second application should be written with it. Our second application is something that you might want to show to other people and you should use git and GitHub for this purpose.</p>
@@ -781,11 +804,11 @@
           </tr>
           <tr>
             <td>JavaDevJournal</td>
-            <td>edureka (YouTube)</td>
+            <td>kindson the tech pro (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.javadevjournal.com/spring-boot/microservices-with-spring-boot/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=tuJqH3AV0e8">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZnW828ZmQBFTPCCoc5y6Ycg">Link to Playlist</a></td>
           </tr>
         </table> <br>
 
