--- a/index.html
+++ b/index.html
@@ -673,22 +673,19 @@
 
         <h4 id="complete-spring-boot-projects">Complete Spring Boot Projects</h4>
 
-        <p>Secure your Spring applications with Spring Security</p>
+        <p>Spring Boot Projects with Spring Security implemented</p>
         <table>
           <tr>
-              <th colspan="2" class="course-title">Spring Security</th>
+              <thclass="course-title">Complete Spring Boot Projects</th>
           </tr>
           <tr>
             <th>Company Employee Management</th>
-            <th>Spring Security Video Tutorial</th>
           </tr>
           <tr>
               <td>Kindson the tech pro <br><a target="_blank" href="https://www.kindsonthegenius.com/spring-boot/build-a-complete-spring-boot-application-from-the-scratch-step-by-step/">Spring Boot Security Authentication Walkthrough</a></td>
-              <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/user-registration-and-login-tutorial">Spring Boot Security Authentication Walkthrough</a></td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZkmDvzHCoLlc_nHBc7ZXiRO">Link to Playlist</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLqq-6Pq4lTTYTEooakHchTGglSvkZAjnE">Link to Playlist</a></td>
           </tr>
         </table> <br>
 
